# jira-traceability

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
mlx/: jira_interaction.py  jira_traceability.py  jira_utils.py
mlx/jira_traceability/: __init__.py  jira_interaction.py  jira_traceability.py  jira_utils.py
tests/: test_jira_interaction.py
